# elice_library

./: .gitignore  app.py  db.sqlite  models.py  pyproject.toml  requirements.txt
migrations/versions/: 34fed1a16047_.py  3c61b829dfba_.py  714ebe26dd77_.py  71557a7270ad_.py  72f6bdf410e2_.py  84d37231ab24_.py  899a19b8c31d_.py  cef98b94885f_.py
templates/: base.html  index.html  loggedin.html  login.html  register.html  welcome.html
webproject/: app.py  db.sqlite  forms.py  load_data.py  models.py
webproject/templates/: base.html  book.html  book_detail.html  loggedin.html  login.html  register.html  rent_log.html  return.html  super_book.html  super_book_detail.html  super_log.html  super_loggedin.html  super_register.html  superlog.html  superloggedin.html  superregister.html  welcome.html
