[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["\"\""]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Migrate = "^2.7.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
